--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node backend/server.js",
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon backend/server",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon backend/server",
-    "seeder": "node seeder"
+    "seeder": "node backend/utils/seeder"
   },
   "keywords": [],
   "author": "",
